include_directories (${PROJECT_SOURCE_DIR}/src/dep/include ${PROJECT_SOURCE_DIR}/src/dep/src ${PROJECT_SOURCE_DIR}/src/shared)
add_library(shared
WDTFile.cpp
Locale.cpp
MPQFile.cpp
MPQHelper.cpp
ProgressBar.cpp
dbcfile.cpp
ADTFile.cpp
MapTile.cpp
log.cpp
tools.cpp
ZCompressor.cpp
MemoryDataHolder.cpp
Auth/SARC4.cpp
Auth/BigNumber.cpp
Auth/AuthCrypt.cpp
Auth/Hmac.cpp
Auth/Sha1.cpp
Auth/md5.c
Network/Utility.cpp
Network/ResolvSocket.cpp
Network/socket_include.cpp
Network/Base64.cpp
Network/ResolvServer.cpp
Network/SocketThread.cpp
Network/CircularBuffer.cpp
Network/Socket.cpp
Network/StdoutLog.cpp
Network/UdpSocket.cpp
Network/Thread.cpp
Network/Parse.cpp
Network/PoolSocket.cpp
Network/SocketHandler.cpp
Network/TcpSocket.cpp
)